<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nitro Settings</string>

    <string name="category_usb_title">USB</string>
    <string name="fastcharge_title_head">Fast Charge</string>
    <string name="fastcharge_summary_head">Enable to draw more power when connected to a PC USB port (750mA)</string>

    <string name="category_backlightdisable_title">Backlight</string>
    <string name="backlightdisable_title_head">Disable Button Backlight</string>
    <string name="backlightdisable_summary_head">Select to disable the capacitive button backlight</string>

    <string name="category_vibrator_intensity_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator Power Control</string>
    <string name="vibrator_intensity_summary_head">Select of powerfull haptic feedback or disable</string>

    <string name="category_sdcard_cache_title">SDCard</string>
    <string name="sdcard_cache_title_head">SDCard Cache size</string>
    <string name="sdcard_cache_summary_head">Select SDCard Cache size for better speed r/w.</string>

    <string name="category_wifi_pm_title">WiFi</string>
    <string name="wifi_pm_title_head">WiFi Control</string>
    <string name="wifi_pm_summary_head">Select mode WIFI_FAST</string>

</resources>
