<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- defaultValues need to be in sync with the default kernel values! -->

	<PreferenceCategory
    	android:title="@string/category_vibrator_intensity_title">
	    <ListPreference
	        android:key="vibrator_intensity"
	        android:title="@string/vibrator_intensity_title_head"
	        android:summary="@string/vibrator_intensity_summary_head"
	        android:entries="@array/vibrator_intensity_entries"
	        android:entryValues="@array/vibrator_intensity_values"
	        android:defaultValue="100" />
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_sdcard_cache_title">
	    <ListPreference
	        android:key="sdcard_cache"
	        android:title="@string/sdcard_cache_title_head"
	        android:summary="@string/sdcard_cache_summary_head"
	        android:entries="@array/sdcard_cache_entries"
	        android:entryValues="@array/sdcard_cache_values"
	        android:defaultValue="256" />
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_usb_title">
	    <CheckBoxPreference
	        android:key="fastcharge"
	        android:title="@string/fastcharge_title_head"
	        android:summary="@string/fastcharge_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_backlightdisable_title">
	    <CheckBoxPreference
	        android:key="backlight_disable"
	        android:title="@string/backlightdisable_title_head"
	        android:summary="@string/backlightdisable_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_wifi_pm_title">
	    <CheckBoxPreference
	        android:key="wifi_pm"
	        android:title="@string/wifi_pm_title_head"
	        android:summary="@string/wifi_pm_summary_head"
	        android:defaultValue="N" />
	</PreferenceCategory>

</PreferenceScreen>
